--- a/learning_users/templates/basic_app/base.html
+++ b/learning_users/templates/basic_app/base.html
@@ -13,15 +13,14 @@
         <ul class="nav navbar-nav">
 
           {# Django Home Link / Admin Link / Register Link#}
-          <li><a class="navbar-brand" href="{% url 'index' %}">DJANGO</a></li>
-          <li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
+          <li><a class="navbar-brand" href="{% url 'index' %}">Welcome page</a></li>
 
 
 
           {# Some logic on what to display for last item#}
           {% if user.is_authenticated %}
             <li><a href="{% url 'logout' %}">Logout</a></li>
-            <li><a class="navbar-link" href="{% url 'basic_app:user_tasks_view' %}">User: {{ user.username }}</a></li>
+            <li><a class="navbar-link" href="{% url 'basic_app:user_tasks_view' %}">Your tasks, {{ user.username }}</a></li>
           {% else %}
             <li><a class="navbar-link" href="{% url 'basic_app:user_login' %}">Login</a></li>
             <li><a class="navbar-link" href="{% url 'basic_app:register' %}">Register</a></li>
