--- a/learning_users/templates/basic_app/index.html
+++ b/learning_users/templates/basic_app/index.html
@@ -3,7 +3,7 @@
 
 <div class="container">
   <div class="jumbotron">
-    <h1>Django Level Five</h1>
+    <h1>Your personal <strong>Task Manager</strong></h1>
     {% if user.is_authenticated %}
         <h2>Welcome {{ user.username }}!</h2>
     {% else %}
