--- a/learning_users/templates/basic_app/tasks.html
+++ b/learning_users/templates/basic_app/tasks.html
@@ -10,6 +10,8 @@
     <label id="hours-{{ forloop.counter }}"> 00</label>:<label id = "minutes-{{ forloop.counter }}">00</label>:<label id = "seconds-{{ forloop.counter }}">00</label>
     <input for="id_timer" type="number" name="timer" id="id_timer" value="{{ usertask.timer }}" style="display:none">
     <input for="id_id" type="number" name="id" id = "id_id" value="{{ usertask.id }}" style="display:none">
+    <input for="id_is_counting" name="is_counting" id ="id_is_counting" value="{{ usertask.is_counting }}" style="display:none">
+    <input type="text" name="partnumber" id ="id_partnumber" value="{{ usertask.partnumber }}" style="display:none">
     <button type="button" name="start_button-{{ forloop.counter }}" id="start_button" onclick="start_time_counting(this.name)" style="display:block">&#9658</button>
     <button type="button" name="stop_button-{{ forloop.counter }}" id="stop_button" onclick="stop_time_counting(this.name)" style="display:none">&#9632</button>
     <button type="button" name="delete_button-{{ forloop.counter }}" id="delete_button" onclick="delete_task(this.name)">&#215</button>
