--- a/learning_users/templates/basic_app/tasks.html
+++ b/learning_users/templates/basic_app/tasks.html
@@ -10,8 +10,8 @@
     <label id="hours-{{ forloop.counter }}"> 00</label>:<label id = "minutes-{{ forloop.counter }}">00</label>:<label id = "seconds-{{ forloop.counter }}">00</label>
     <input for="id_timer" type="number" name="timer" id="id_timer" value="{{ usertask.timer }}" style="display:none">
     <input for="id_id" type="number" name="id" id = "id_id" value="{{ usertask.id }}" style="display:none">
-    <input for="id_is_counting" name="is_counting" id ="id_is_counting" value="{{ usertask.is_counting }}" style="display:none">
-    <input type="text" name="partnumber" id ="id_partnumber" value="{{ usertask.partnumber }}" style="display:none">
+    <input for="id_is_counting" name="is_counting-{{ forloop.counter }}" id ="id_is_counting" value="{{ usertask.is_counting }}" style="display:none">
+    <input type="text" name="partnumber -{{ forloop.counter }}" id ="id_partnumber" value="{{ usertask.partnumber }}" style="display:none">
     <button type="button" name="start_button-{{ forloop.counter }}" id="start_button" onclick="start_time_counting(this.name)" style="display:block">&#9658</button>
     <button type="button" name="stop_button-{{ forloop.counter }}" id="stop_button" onclick="stop_time_counting(this.name)" style="display:none">&#9632</button>
     <button type="button" name="delete_button-{{ forloop.counter }}" id="delete_button" onclick="delete_task(this.name)">&#215</button>
@@ -34,26 +34,33 @@
   <button type="button" id="cancel_create_button" style="display:none" onclick="create_new_task()">Отмена</button>
 
   <script type="text/javascript">
+
     function pad (val) { return val > 9 ? val : "0" + val; };                   //дописываем 0, если число часов, минут или секунд меньше 10
 
     loop_counter = parseInt(document.getElementById("counter").innerText, 10);  //берем число задач для пользователя из числа повтора цикла
     if (loop_counter != 0) {
       for ( let i = 1; i<(loop_counter+1); i++) {
         var sec = document.getElementsByName("timer-"+i.toString())[0].value;   //берем исходное значение секунд задачи
-        document.getElementById("seconds-"+i.toString()).innerText = pad(sec%60); //заполняем для секунд
+        document.getElementById("seconds-"+i.toString()).innerText = pad(Math.floor(sec%60)); //заполняем для секунд
         document.getElementById("minutes-"+i.toString()).innerText = pad(Math.floor(sec%3600/60));    //минут
         document.getElementById("hours-"+i.toString()).innerText = pad(Math.floor(sec/3600)); //часов
+        counting = document.getElementsByName("is_counting-"+i.toString())[0].value;
+
+        if (counting = "1"){
+          start_time_counting(i);
+        }
       }
     }
-    var time_counter = {};                                                      //объявляем переменнуЮ, которую будем использовать для счетчика
+                                                     //объявляем переменнуЮ, которую будем использовать для счетчика
 
-    function start_time_counting(clicked_name) {
-          item_number = clicked_name.split('-')[1];                             //определяем номер в имени нажатой кнопки
+    function start_time_counting(number) {
+          item_number = number;                             //определяем номер в имени нажатой кнопки
           document.getElementsByName("start_button-"+item_number.toString())[0].style.display="none";
           document.getElementsByName("stop_button-"+item_number.toString())[0].style.display="block";
           var sec = document.getElementsByName("timer-"+item_number.toString())[0].value;   //берем исходное значение секунд задачи
+          var time_counter = {};
           time_counter = setInterval(function(){
-            document.getElementById("seconds-"+item_number.toString()).innerText=pad(++sec%60);               //функция плюсует только значение sec, которое брало цифру из базы данных
+            document.getElementById("seconds-"+item_number.toString()).innerText=pad(Math.floor(++sec%60));               //функция плюсует только значение sec, которое брало цифру из базы данных
             document.getElementById("minutes-"+item_number.toString()).innerText=pad(Math.floor(sec%3600/60));
             document.getElementById("hours-"+item_number.toString()).innerText=pad(Math.floor(sec/3600))
           }, 1000);
@@ -88,10 +95,9 @@
 
     function delete_task(clicked_name) {
       item_number = clicked_name.split('-')[1];
-      document.getElementsByName("form-"+item_number.toString())[0][8].value="Yes";
+      document.getElementsByName("form-"+item_number.toString())[0][10].value="Yes";
       document.getElementsByName("form-"+item_number.toString())[0].submit();
     }
-
 
   </script>
 {% endblock %}
