--- a/learning_users/templates/basic_app/tasks.html
+++ b/learning_users/templates/basic_app/tasks.html
@@ -12,8 +12,7 @@
     <input for="id_id" type="number" name="id" id = "id_id" value="{{ usertask.id }}" style="display:none">
     <input for="id_is_counting" name="is_counting-{{ forloop.counter }}" id ="id_is_counting" value="{{ usertask.is_counting }}" style="display:none">
     <input type="text" name="partnumber -{{ forloop.counter }}" id ="id_partnumber" value="{{ usertask.partnumber }}" style="display:none">
-    <button type="button" name="start_button-{{ forloop.counter }}" id="start_button" onclick="start_time_counting(this.name)" style="display:block">&#9658</button>
-    <button type="button" name="stop_button-{{ forloop.counter }}" id="stop_button" onclick="stop_time_counting(this.name)" style="display:none">&#9632</button>
+    <button type="submit" name="start_button-{{ forloop.counter }}" id="start_button" onclick="start_time_counting(this.name)" style="display:block">&#9658</button>
     <button type="button" name="delete_button-{{ forloop.counter }}" id="delete_button" onclick="delete_task(this.name)">&#215</button>
     <input type="text" name="fordelete" id="id_fordelete" value="No" style="display:none"</input>
   </form>
@@ -55,8 +54,7 @@
 
     function start_time_counting(number) {
           item_number = number;                             //определяем номер в имени нажатой кнопки
-          document.getElementsByName("start_button-"+item_number.toString())[0].style.display="none";
-          document.getElementsByName("stop_button-"+item_number.toString())[0].style.display="block";
+          document.getElementsByName("start_button-"+item_number.toString())[0].innerText = "■";
           var sec = document.getElementsByName("timer-"+item_number.toString())[0].value;   //берем исходное значение секунд задачи
           var time_counter = {};
           time_counter = setInterval(function(){
@@ -69,8 +67,7 @@
     function stop_time_counting(clicked_name) {                                                     //остановка отсчета времени. Не сброс
         clearInterval(time_counter);
         item_number = clicked_name.split('-')[1];
-        document.getElementsByName("start_button-"+item_number.toString())[0].style.display="block";
-        document.getElementsByName("stop_button-"+item_number.toString())[0].style.display="none";
+
         hours = parseInt(document.getElementById("hours-"+item_number.toString()).innerText);
         minutes = parseInt(document.getElementById("minutes-"+item_number.toString()).innerText);
         seconds = parseInt(document.getElementById("seconds-"+item_number.toString()).innerText);
@@ -95,7 +92,7 @@
 
     function delete_task(clicked_name) {
       item_number = clicked_name.split('-')[1];
-      document.getElementsByName("form-"+item_number.toString())[0][10].value="Yes";
+      document.getElementsByName("form-"+item_number.toString())[0][9].value="Yes";
       document.getElementsByName("form-"+item_number.toString())[0].submit();
     }
 
