done with forms. need to make journal work. and front end too

--- a/learning_users/templates/basic_app/test.html
+++ b/learning_users/templates/basic_app/test.html
@@ -1,3 +1,2 @@
-<tr><th><label for="id_name">Name:</label></th><td><input type="text" name="name" value="6546+874" required id="id_name"></td></tr>
-<tr><th><label for="id_timer">Timer:</label></th><td><input type="number" name="timer" value="104" required id="id_timer"></td></tr>
-<tr><th><label for="id_id">Id:</label></th><td><input type="text" name="id" value="4" required id="id_id"></td></tr>
+<tr><th><label for="id_timer">Timer:</label></th><td><input type="number" name="timer" value="161954" required id="id_timer"></td></tr>
+<tr><th><label for="id_partnumber">Partnumber:</label></th><td><ul class="errorlist"><li>This field is required.</li></ul><input type="number" name="partnumber" required id="id_partnumber"></td></tr>
