--- a/learning_users/templates/basic_app/tasks.html
+++ b/learning_users/templates/basic_app/tasks.html
@@ -11,7 +11,7 @@
     <input for="id_timer" type="number" name="timer" id="id_timer" value="{{ usertask.timer }}" style="display:none">
     <input for="id_id" type="number" name="id" id = "id_id" value="{{ usertask.id }}" style="display:none">
     <input for="id_is_counting" name="is_counting-{{ forloop.counter }}" id ="id_is_counting" value="{{ usertask.is_counting }}" style="display:none">
-    <input for="id_partnumber" type="number" name="partnumber-{{ forloop.counter }}" id ="id_partnumber" value="{{ usertask.partnumber }}" style="display:none">
+    <input for="id_partnumber" type="number" name="partnumber" id ="id_partnumber" value="{{ usertask.partnumber }}" style="display:none">
     <button type="submit" name="start_button" id="start_button" style="display:block">&#9658</button>
     <button type="submit" name="stop_button" id="stop_button" style="display:none">■</button>
     <button type="button" name="delete_button-{{ forloop.counter }}" id="delete_button" onclick="delete_task(this.name)">&#215</button>
