--- a/learning_users/templates/basic_app/report_page.html
+++ b/learning_users/templates/basic_app/report_page.html
@@ -1,6 +1,6 @@
 {% extends "basic_app/base.html" %}
 {% block body_block %}
-
+<label id="counter" style="display:none">{{ counter }}</label>
 <div class="panel panel-default">
   <div class="panel-heading">Reports</div>
   <div class="panel-body">
@@ -14,14 +14,35 @@
     </thead>
   {% for usertask in usertasks %}
     <tr>
-      <td>{{ usertask.name }}</td><td>{{ usertask.timer }}</td>
+      <td>{{ usertask.name }}</td><td><label id="hours-{{ forloop.counter }}"> 00</label>:<label id = "minutes-{{ forloop.counter }}">00</label>:<label id = "seconds-{{ forloop.counter }}">00</label></td>
     </tr>
+    <label name="timer-{{ forloop.counter }}" style="display:none">{{ usertask.timer }}</label>
     <!-- <h4>{{ usertask.name }}</h4> <span>{{ usertask.timer }}</span> -->
   {% endfor %}
-
+  <thead>
+    <td>Spent time for the period</td><td><label id="hours-final"> 00</label>:<label id = "minutes-final">00</label>:<label id = "seconds-final">00</label></td></td>
+  </thead>
   </table>
 </div>
 
+<script type="text/javascript">
 
+  function pad (val) { return val > 9 ? val : "0" + val; };                   //дописываем 0, если число часов, минут или секунд меньше 10
 
+  loop_counter = parseInt(document.getElementById("counter").innerText, 10);  //берем число задач для пользователя из числа повтора цикла
+  if (loop_counter != 0) {
+    var res = 0
+    for ( let i = 1; i<(loop_counter+1); i++) {
+      var sec = parseInt(document.getElementsByName("timer-"+i.toString())[0].innerText, 10);   //берем исходное значение секунд задачи
+      document.getElementById("seconds-"+i.toString()).innerText = pad(Math.floor(sec%60)); //заполняем для секунд
+      document.getElementById("minutes-"+i.toString()).innerText = pad(Math.floor(sec%3600/60));    //минут
+      document.getElementById("hours-"+i.toString()).innerText = pad(Math.floor(sec/3600)); //часов
+      res = res + sec;
+    }
+    document.getElementById("seconds-final").innerText = pad(Math.floor(res%60)); //заполняем для секунд
+    document.getElementById("minutes-final").innerText = pad(Math.floor(res%3600/60));    //минут
+    document.getElementById("hours-final").innerText = pad(Math.floor(res/3600)); //часов
+  }
+
+</script>
 {% endblock %}
