--- a/learning_users/templates/basic_app/test.html
+++ b/learning_users/templates/basic_app/test.html
@@ -1,2 +1,2 @@
-<tr><th><label for="id_timer">Timer:</label></th><td><input type="number" name="timer" value="161954" required id="id_timer"></td></tr>
-<tr><th><label for="id_partnumber">Partnumber:</label></th><td><ul class="errorlist"><li>This field is required.</li></ul><input type="number" name="partnumber" required id="id_partnumber"></td></tr>
+<tr><th><label for="id_name">Name:</label></th><td><ul class="errorlist"><li>This field is required.</li></ul><input type="text" name="name" maxlength="30" required id="id_name"></td></tr>
+<tr><th><label for="id_to_show">To show:</label></th><td><ul class="errorlist"><li>This field is required.</li></ul><input type="number" name="to_show" required id="id_to_show"></td></tr>
